# private-box-native

./: .gitignore  CMakeLists.txt  README.md  binding.gyp  build-native.sh.in  index.js  max_num_recps_test.txt  normal-test.txt  package-lock.json  package.json  private-box-native.cc  private-box.h  private_box.h
lib/: index.js
native/: CMakeLists.txt  Cargo.toml  Cross.toml  Makefile.toml  build.rs
native/src/: binding.cc  lib.rs
native/src/napi/: mod.rs
private-box-rs/: Cargo.toml
private-box-rs/src/: lib.rs
test/: bench-results-arm64.txt  benchmark-results-current.txt  benchmark.js  big.json  create-test-vector.js  index.js
