[package]
name = "private-box-native"
version = "0.1.0"
authors = ["Piet Geursen <pietgeursen@gmail.com>"]
license = "MIT"

[lib]
name = "private_box_native"
crate-type = ["dylib"]

[dependencies]
private-box = "0.4.3"
error-chain = "0.12.0"

# [dependencies.private-box]
# path = "../../private-box-rs"

[build-dependencies]
bindgen = "0.42.2"
